fixed token alignment, need to fix sentence alignment

--- a/src/app/token/token.component.css
+++ b/src/app/token/token.component.css
@@ -1,9 +1,11 @@
 .highlightText {
     background: yellow;
+    display:block;
 }
 
 #token_style {
-    display: flex;
+    display: block;
     /*vertical-align: middle;*/
     align-items: center;
+    height: 50%;
 }
